// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Dragon Ball
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imagenes UseFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Dragon Ball
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="asd"
      key="asd"
      title="Cualquier cosa"
      url="https://localhost.com"
    />
    <GifGridItem
      id="asd"
      key="asd"
      title="Cualquier cosa"
      url="https://localhost.com"
    />
  </div>
</Fragment>
`;
